revert nginx back to old settings

--- a/.github/workflows/triagedeploy.yml
+++ b/.github/workflows/triagedeploy.yml
@@ -116,6 +116,7 @@ jobs:
             envkey_DATABASE_USER: ${{ secrets.DATABASE_USER }}
             envkey_DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
             envkey_DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+            envkey_DATABASE_NAME: mapmaker_prod
             envkey_HCTI_API_KEY: ${{ secrets.HCTI_API_KEY }}
             envkey_HCTI_API_USER_ID: ${{ secrets.HCTI_API_USER_ID }}
             envkey_SECURE_SETTINGS: True
@@ -193,6 +194,7 @@ jobs:
           envkey_DATABASE_USER: ${{ secrets.DATABASE_USER }}
           envkey_DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
           envkey_DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+          envkey_DATABASE_NAME: mapmaker_dev
           envkey_HCTI_API_KEY: ${{ secrets.HCTI_API_KEY }}
           envkey_HCTI_API_USER_ID: ${{ secrets.HCTI_API_USER_ID }}
           envkey_SECURE_SETTINGS: True
