--- a/.github/workflows/productiondeploy.yml
+++ b/.github/workflows/productiondeploy.yml
@@ -123,6 +123,7 @@ jobs:
             envkey_DATABASE_USER: ${{ secrets.DATABASE_USER }}
             envkey_DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
             envkey_DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+            envkey_DATABASE_NAME: "mapmaker_prod"
             envkey_HCTI_API_KEY: ${{ secrets.HCTI_API_KEY }}
             envkey_HCTI_API_USER_ID: ${{ secrets.HCTI_API_USER_ID }}
             envkey_SECURE_SETTINGS: True
@@ -200,6 +201,7 @@ jobs:
           envkey_DATABASE_USER: ${{ secrets.DATABASE_USER }}
           envkey_DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
           envkey_DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+          envkey_DATABASE_NAME: "mapmaker_dev"
           envkey_HCTI_API_KEY: ${{ secrets.HCTI_API_KEY }}
           envkey_HCTI_API_USER_ID: ${{ secrets.HCTI_API_USER_ID }}
           envkey_SECURE_SETTINGS: True
