--- a/Infrastructure/nginx/default.conf
+++ b/Infrastructure/nginx/default.conf
@@ -1,5 +1,7 @@
 proxy_cache_path /tmp/nginx keys_zone=mycache:1m;
 
+
+
 server {
     listen 80;
     location / {
@@ -9,7 +11,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
         }
-    location /dev {
+    listen 8080;
+    server_name triage.mapmaker.nl;
+    location / {
         proxy_pass http://localhost:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
