--- a/Infrastructure/nginx/default.conf
+++ b/Infrastructure/nginx/default.conf
@@ -1,20 +1,10 @@
 proxy_cache_path /tmp/nginx keys_zone=mycache:1m;
 
-
-
 server {
     listen 80;
+    server_name mapmaker.nl;
     location / {
         proxy_pass http://localhost:8000;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-        }
-    listen 8080;
-    server_name triage.mapmaker.nl;
-    location / {
-        proxy_pass http://localhost:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -30,5 +20,23 @@ server {
     location /healthcheck {
         add_header Content-Type text/plain;
         return 200 'Up and running!';
+        }
+}
+server {
+    listen 80;
+    server_name triage.mapmaker.nl;
+    location / {
+        proxy_pass http://localhost:8080;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+        }
+    location /static/ {
+        proxy_cache mycache;
+        proxy_cache_background_update on;
+        proxy_cache_use_stale updating;
+        proxy_cache_valid 60s;
+        alias /static/;
         }
 }
