simplified dev server name

--- a/Infrastructure/nginx/default.conf
+++ b/Infrastructure/nginx/default.conf
@@ -24,7 +24,7 @@ server {
 }
 server {
     listen 80;
-    server_name https://mapmaker.vdotvo9a4e2a6.eu-central-1.cs.amazonlightsail.com;
+    server_name mapmaker.vdotvo9a4e2a6.eu-central-1.cs.amazonlightsail.com;
     location / {
         proxy_pass http://localhost:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
