--- a/Infrastructure/nginx/default.conf
+++ b/Infrastructure/nginx/default.conf
@@ -2,7 +2,6 @@ proxy_cache_path /tmp/nginx keys_zone=mycache:1m;
 
 server {
     listen 80;
-    server_name mapmaker.nl;
     location / {
         proxy_pass http://localhost:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -10,6 +9,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
         }
+    location /dev {
+        proxy_pass http://localhost:8080;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+        rewrite ^/dev(.*)$ $1 last;
+    }
     location /static/ {
         proxy_cache mycache;
         proxy_cache_background_update on;
@@ -20,23 +27,5 @@ server {
     location /healthcheck {
         add_header Content-Type text/plain;
         return 200 'Up and running!';
-        }
-}
-server {
-    listen 80;
-    server_name mapmaker.vdotvo9a4e2a6.eu-central-1.cs.amazonlightsail.com;
-    location / {
-        proxy_pass http://localhost:8080;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-        }
-    location /static/ {
-        proxy_cache mycache;
-        proxy_cache_background_update on;
-        proxy_cache_use_stale updating;
-        proxy_cache_valid 60s;
-        alias /static/;
         }
 }
