--- a/Infrastructure/nginx/default.conf
+++ b/Infrastructure/nginx/default.conf
@@ -10,12 +10,12 @@ server {
         proxy_redirect off;
         }
     location /dev {
+        rewrite /dev/(.*) /$1  break;
         proxy_pass http://localhost:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
-        rewrite ^/dev(.*)$ $1 last;
     }
     location /static/ {
         proxy_cache mycache;
