rewrite rule in nginx updated

--- a/Infrastructure/nginx/default.conf
+++ b/Infrastructure/nginx/default.conf
@@ -10,7 +10,7 @@ server {
         proxy_redirect off;
         }
     location /dev {
-        rewrite /dev/(.*) /$1  break;
+        rewrite /foo(/.*|$) /$1  break;
         proxy_pass http://localhost:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
