--- a/Infrastructure/nginx/default.conf
+++ b/Infrastructure/nginx/default.conf
@@ -1,7 +1,7 @@
 proxy_cache_path /tmp/nginx keys_zone=mycache:1m;
 
 server {
-    listen 80;
+    server_name mapmaker.nl;
     location / {
         proxy_pass http://localhost:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -9,13 +9,27 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
         }
-    location /dev/ {
-        proxy_pass http://localhost:8080/;
+    location /static/ {
+        proxy_cache mycache;
+        proxy_cache_background_update on;
+        proxy_cache_use_stale updating;
+        proxy_cache_valid 60s;
+        alias /static/;
+        }
+    location /healthcheck {
+        add_header Content-Type text/plain;
+        return 200 'Up and running!';
+        }
+}
+server {
+    server_name triage.mapmaker.nl;
+    location / {
+        proxy_pass http://localhost:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
-    }
+        }
     location /static/ {
         proxy_cache mycache;
         proxy_cache_background_update on;
