--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:    
       - '**'        # matches every branch
-      - '!main'   # excludes master
+      - '!master'   # excludes master
 permissions:
   contents: read
 
