adding migrations to dockerfile prod

--- a/Infrastructure/Docker/DockerfilePROD
+++ b/Infrastructure/Docker/DockerfilePROD
@@ -14,7 +14,7 @@ EXPOSE 8000
 COPY Infrastructure/requirements.txt .
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
-
+RUN: python manage.py migrate --noinput
 # Copy the content of the local src directory to the working directory
 COPY src .
 
@@ -27,6 +27,6 @@ COPY src .
 RUN adduser --system --group --no-create-home uwsgi
 USER uwsgi
 CMD [ "uwsgi", "--http", "0.0.0.0:8000", \
-               "--uid", "uwsgi", \
-               "--protocol", "uwsgi", \
-               "--wsgi", "core.wsgi:application" ]
+            "--uid", "uwsgi", \
+            "--protocol", "uwsgi", \
+            "--wsgi", "core.wsgi:application" ]
