--- a/Infrastructure/Docker/DockerfilePROD
+++ b/Infrastructure/Docker/DockerfilePROD
@@ -14,7 +14,7 @@ EXPOSE 8000
 COPY Infrastructure/requirements.txt .
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
-RUN: python manage.py migrate --noinput
+RUN python manage.py migrate --noinput
 # Copy the content of the local src directory to the working directory
 COPY src .
 
