updated correct PEM cert

--- a/Infrastructure/Docker/DockerfilePROD
+++ b/Infrastructure/Docker/DockerfilePROD
@@ -1,4 +1,5 @@
 # Set base image (host OS)
+# docker build -t nginx:latest -f Infrastructure/Docker/DockerfilePROD .
 # The Django version we are using depends on Sequence which was moved in python 3.10. That's why we install 3.9. 
 FROM python:3.9-buster
 
