Moved legend to workshop model

--- a/.github/workflows/productiondeploy.yml
+++ b/.github/workflows/productiondeploy.yml
@@ -33,7 +33,7 @@ jobs:
 
   sendnotification:
     name: ✅ Notify success
-    needs: [deployimages, validatedeployment, buildnginx, builddjango, startnotification]
+    needs: [deployimages, validatedeployment, builddjango, startnotification]
     runs-on: ubuntu-latest
     steps:
       - name: send telegram message on push
@@ -46,58 +46,6 @@ jobs:
             🌎 server is up - we checked!
             Site: https://mapmaker.nl 
             Deployment log: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-  
-  
-  buildnginx:
-    name: 🌎 building nginx webserver
-    needs: [startnotification]
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🗂  Getting code from Github
-        uses: actions/checkout@v2
-      - name: ⚙️  Updating to the latest versions
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq unzip
-      - name: 🏢 Install Amazon Client
-        run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install || true
-          aws --version
-          curl "https://s3.us-west-2.amazonaws.com/lightsailctl/latest/linux-amd64/lightsailctl" -o "lightsailctl"
-          sudo mv "lightsailctl" "/usr/local/bin/lightsailctl"
-          sudo chmod +x /usr/local/bin/lightsailctl
-      - name: 🤐 Log in to AWS Lightsail with Secrets
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: ${{ env.AWS_REGION }}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: 🐳 Create a Docker Container for NGINX
-        run: docker build -t nginx:latest -f ./Infrastructure/nginx/Dockerfile .
-      - name: 📬 Upload NGINX image to AWS container register
-        run: |
-          service_name=${{ env.AWS_LIGHTSAIL_SERVICE_NAME }}
-          aws lightsail push-container-image \
-            --region ${{ env.AWS_REGION }} \
-            --service-name ${service_name} \
-            --label nginx \
-            --image nginx:latest
-      - name: =========== All done. Cleaning up ♻️  ===========
-        run: ls
-      - name: Build Alerts
-        if: ${{ failure() }}
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_CHAT }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |
-            🚨 Deployment failed 🚨
-            Build ${{ github.run_id }} failed
-
-            Something went wrong while building the NGINX container the containers to AWS. See the details here:
-            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
   builddjango:
       name: 🚨 Prod Django
@@ -186,7 +134,7 @@ jobs:
 
   deployimages:
     name: 🚀 Deploying the containers to AWS Lightsail
-    needs: [builddjango, buildnginx]
+    needs: [builddjango]
     runs-on: ubuntu-latest
     steps:
       - name: 🗂  Getting config files from Github
