🤖 Merge and Deploy refs/heads/legend (#42)
* Adding planetscale

* added migrations back in

* tested migrations

* cleaned up drawer

* simplified triage deploy

* Simplified Triage CI

* Moved legend to workshop model

* Card colors from workshopmodel

* image form connected to dbfield

* legend with correct colors

--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -16,7 +16,8 @@ concurrency:
 jobs:
  
   buildcontainers:
-    name: 🌎 building nginx webserver
+    name: 🌎 Deploying to Triage env
+
     runs-on: ubuntu-latest
     steps:
       - name: 🗂  Getting code from Github
