--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -42,6 +42,9 @@ jobs:
           envkey_SECURE_SETTINGS: True
           envkey_DEBUG: True
           envkey_MIXPANEL_TOKEN: ${{ secrets.MIXPANEL_TOKEN}}
+          envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
+          envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
+          envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
           directory: src/core
           file_name: .env
           fail_on_empty: false
