--- a/.github/workflows/productiondeploy.yml
+++ b/.github/workflows/productiondeploy.yml
@@ -71,6 +71,9 @@ jobs:
             envkey_SECURE_SETTINGS: True
             envkey_DEBUG: false
             envkey_MIXPANEL_TOKEN: ${{ secrets.MIXPANEL_TOKEN}}
+            envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
+            envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
+            envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
             directory: src/core
             file_name: .env
             fail_on_empty: false
@@ -93,16 +96,6 @@ jobs:
             aws-region: ${{ env.AWS_REGION }}
             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        - name: Installing dependancies
-          run: |
-            sudo pip3 install --upgrade pip
-            sudo pip3 install -r Infrastructure/requirements.txt
-        - name: 📦 Collecting all static files and Migrate
-          run: |
-            python3 src/manage.py collectstatic --noinput
-            python3 src/manage.py makemigrations --noinput
-            python3 src/manage.py migrate --noinput
-
         - name: 🐳 Create a Docker Container for DJANGO
           run: docker build -t mapmaker:latest -f ./Infrastructure/Docker/DockerfilePROD .
         - name: 📬 Upload Backend image to AWS container register
